--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "preview": "astro preview"
   },
   "dependencies": {
+    "@astrojs/mdx": "^4.3.13",
     "@astrojs/tailwind": "^6.0.2",
     "@fontsource/noto-sans-sc": "^5.2.9",
     "@fontsource/open-sans": "^5.2.7",
