--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/typography": "^0.5.19",
     "astro": "^5.17.2",
     "fuse.js": "^7.1.0",
+    "sharp": "^0.34.5",
     "tailwindcss": "^3.4.19"
   }
 }
